tests/negative/modules/circular_b.tx
import { bar } from "./circular_a.tx";

export function foo() {
    return bar();
}
